<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FuLiCenter</string>
    <string name="Version_number_is_wrong">Version number is wrong</string>
    <string name="now_refresh">now_refresh</string>
    <string name="no_more">no more</string>
    <string name="load_more">load more</string>

    <string name="user_name">User name</string>
    <string name="nickname">NickName</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="user_name_connot_be_empty">user name connot be empty</string>
    <string name="illegal_user_name">illegal user name</string>
    <string name="nick_name_connot_be_empty">nick name connot be empty</string>
    <string name="password_connot_be_empty">password connot be empty</string>
    <string name="confirm_password_connot_be_empty">confirm password connot be empty</string>
    <string name="two_input_password">illegal password</string>
    <string name="registering">registering</string>
    <string name="register_fail">register fail</string>
    <string name="register_success">register success</string>
    <string name="register_fail_exists">user name exists</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_goods_detail">GoodsDetailActivity</string>
    <string name="title_activity_boutique_child">BoutiqueChildActivity</string>
    <string name="title_activity_category_child">CategoryChildActivity</string>
    <string name="login_fail">login fail</string>
    <string name="logining">logining</string>
    <string name="login_fail_unknow_user">login fail unknow user</string>
    <string name="login_fail_error_password">login fail error password</string>
    <string name="user_database_error">user database error</string>
    <string name="user_profile">user profile</string>
    <string name="nick_name_cannot_be_empty">nick name cannot be empty</string>
    <string name="update_nick_fail_unmodify">update nick fail unmodify</string>
    <string name="update_user_nick">update user nick</string>
    <string name="update_fail">update fail</string>
    <string name="username_cannot_be_modify">username cannot be modify</string>
    <string name="update_user_nick_success">update user nick success</string>
    <string name="update_user_avatar">update user avatar</string>
    <string name="update_user_avatar_fail">update user avatar fail</string>
    <string name="update_user_avatar_success">update user avatar success</string>
    <string name="collect_title">collect title</string>
    <string name="delete_collect_fail">delete collect fail</string>
    <string name="login_first">login first</string>
    <string name="add_collect_success">add collect success</string>
    <string name="add_collect_fail">add collect fail</string>
    <string name="remove_collect_success">remove collect success</string>
    <string name="remove_collect_fail">remove collect fail</string>
    <string name="confirm_order">confirm order</string>
    <string name="add_goods_success">add goods success</string>
    <string name="add_goods_fail">add goods fail</string>
    <string name="order_nothing">order nothing</string>
</resources>