<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:padding="50dp"
        tools:context="com.nealyi.app.activity.LoginActivity">
    <EditText
            android:id="@+id/et_login_user_name"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/et_login_password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_bg_orange"
            android:text="@string/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btn_register"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>
